--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.2.10
 Django==3.0.8
 gunicorn==20.0.4
+python-http-client==3.2.7
 pytz==2020.1
 sqlparse==0.3.1
+starkbank-ecdsa==1.0.0
 whitenoise==5.1.0
